[package]
name = "traitor-derive"
version = "0.0.0"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
edition = "2018"
repository = "https://github.com/idubrov/traitor"
license = "MIT/Apache-2.0"
description = "procmacro for the traitor crate"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.10"
syn = { version = "0.15.23", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2 = "0.4.24"